# trap

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml  trap.example.yaml
.github/workflows/: ci.yml
crates/trap-api/: Cargo.toml
crates/trap-api/src/: config.rs  error.rs  extractors.rs  lib.rs  response.rs  server.rs  state.rs
crates/trap-api/src/auth/: claims.rs  context.rs  jwt.rs  mod.rs  permission.rs  rbac.rs
crates/trap-api/src/handlers/: auth.rs  devices.rs  health.rs  mod.rs  status.rs
crates/trap-api/src/middleware/: audit.rs  auth.rs  mod.rs  rate_limit.rs  rbac.rs
crates/trap-bin/: Cargo.toml
crates/trap-bin/src/: cli.rs  error.rs  lib.rs  logging.rs  main.rs  runtime.rs  shutdown.rs
crates/trap-bin/src/commands/: encrypt.rs  health.rs  mod.rs  run.rs  validate.rs  version.rs
crates/trap-buffer/: Cargo.toml
crates/trap-buffer/src/: lib.rs  manager.rs  memory.rs  metrics.rs  rocksdb.rs  traits.rs
crates/trap-config/: Cargo.toml
crates/trap-config/src/: encryption.rs  error.rs  lib.rs  loader.rs  parser.rs  schema.rs
crates/trap-core/: Cargo.toml
crates/trap-core/src/: address.rs  bus.rs  circuit_breaker.rs  converter.rs  driver.rs  error.rs  handler.rs  hooks.rs  lib.rs  manager.rs  message.rs  retry.rs  types.rs
crates/trap-core/src/audit/: batch_logger.rs  composite_logger.rs  error.rs  file_logger.rs  formatter.rs  memory_logger.rs  metrics.rs  mod.rs  types.rs
crates/trap-modbus/: Cargo.toml
crates/trap-modbus/src/: driver.rs  error.rs  lib.rs  types.rs
crates/trap-modbus/src/client/: conversion.rs  mod.rs  retry.rs  rtu.rs  tcp.rs  transport.rs
crates/trap-opcua/: Cargo.toml
crates/trap-opcua/docs/: API.md  SECURITY.md  TROUBLESHOOTING.md
crates/trap-opcua/src/: browse.rs  driver.rs  error.rs  lib.rs  types.rs
crates/trap-opcua/src/certificate/: config.rs  error.rs  generator.rs  manager.rs  mod.rs  store.rs  validator.rs
crates/trap-opcua/src/client/: conversion.rs  mod.rs  real_transport.rs  session.rs  subscription.rs  transport.rs  wrapper.rs
crates/trap-opcua/tests/: opcua_integration.rs
crates/trap-tests/: Cargo.toml
crates/trap-tests/src/: lib.rs
crates/trap-tests/src/common/: assertions.rs  builders.rs  fixtures.rs  harness.rs  mocks.rs  mod.rs
crates/trap-tests/tests/: integration_api.rs  integration_buffer.rs  integration_config.rs  integration_core.rs
docker/: Dockerfile
