# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Copyright (c) 2025 Sylvex. All rights reserved.

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.83"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/seadonggyun4/trap"
authors = ["Sylvex <contact@sylvex.io>"]
keywords = ["iot", "industrial", "modbus", "opcua", "bacnet"]
categories = ["network-programming", "embedded"]

[workspace.dependencies]
# =============================================================================
# Internal Crates
# =============================================================================
trap-core = { path = "crates/trap-core" }
trap-config = { path = "crates/trap-config" }
trap-buffer = { path = "crates/trap-buffer" }
trap-api = { path = "crates/trap-api" }

# =============================================================================
# Async Runtime
# =============================================================================
tokio = { version = "1.43", features = ["full", "tracing"] }
async-trait = "0.1"
futures = "0.3"

# =============================================================================
# Serialization
# =============================================================================
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"

# =============================================================================
# Error Handling
# =============================================================================
thiserror = "2.0"
anyhow = "1.0"

# =============================================================================
# Logging & Tracing
# =============================================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# =============================================================================
# Date & Time
# =============================================================================
chrono = { version = "0.4", features = ["serde"] }

# =============================================================================
# UUID
# =============================================================================
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# =============================================================================
# Concurrency
# =============================================================================
dashmap = "6.1"
parking_lot = "0.12"

# =============================================================================
# Security (Enterprise)
# =============================================================================
jsonwebtoken = "9.3"
argon2 = "0.5"
rustls = "0.23"
rustls-pemfile = "2.2"
rand = "0.8"

# =============================================================================
# Encryption
# =============================================================================
aes-gcm = "0.10"
base64 = "0.22"

# =============================================================================
# API Server
# =============================================================================
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# =============================================================================
# Rate Limiting
# =============================================================================
governor = "0.8"

# =============================================================================
# Metrics
# =============================================================================
prometheus = "0.13"

# =============================================================================
# Buffer Storage
# =============================================================================
rocksdb = "0.22"

# =============================================================================
# Configuration
# =============================================================================
config = "0.15"

# =============================================================================
# HTTP Client (for buffer flush)
# =============================================================================
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# =============================================================================
# CLI
# =============================================================================
clap = { version = "4.5", features = ["derive", "env"] }

# =============================================================================
# Testing
# =============================================================================
tokio-test = "0.4"
tempfile = "3.14"
mockall = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
