# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Copyright (c) 2025 Sylvex. All rights reserved.

[package]
name = "trap-bin"
description = "CLI binary for TRAP industrial protocol gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "trap_bin"
path = "src/lib.rs"

[[bin]]
name = "trap"
path = "src/main.rs"

[features]
default = ["full"]
full = ["tls", "rate-limit", "rocksdb-backend", "encryption"]
tls = ["trap-api/tls"]
rate-limit = ["trap-api/rate-limit"]
rocksdb-backend = ["trap-buffer/rocksdb-backend"]
encryption = ["trap-config/encryption"]

[dependencies]
trap-core = { workspace = true }
trap-config = { workspace = true }
trap-buffer = { workspace = true }
trap-api = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
