[package]
name = "trap-opcua"
version = "0.1.0"
edition = "2021"
authors = ["Sylvex <contact@sylvex.io>"]
license = "PolyForm-Noncommercial-1.0.0"
description = "OPC UA protocol driver for TRAP gateway"
repository = "https://github.com/sylvex/trap"
keywords = ["opcua", "industrial", "iot", "protocol", "gateway"]
categories = ["network-programming", "embedded"]

[features]
default = []
# Enable real OPC UA transport using opcua crate
real-transport = ["opcua"]

[dependencies]
# Core
trap-core = { path = "../trap-core" }

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["sync", "time", "fs"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# UUID for GUID NodeId
uuid = { version = "1.0", features = ["v4"] }

# Base64 for ByteString NodeId
base64 = "0.21"

# Human-readable duration parsing
humantime = "2.1"

# JSON for metadata
serde_json = "1.0"

# Directory utilities for default paths
dirs = "5.0"

# OPC UA library (optional, requires feature flag)
opcua = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
